          around this by passing the cmake flag -DGRAPHVIZ_DYNAMIC_PLUGINS=1 .
    ENGINE:
        Class BoundaryComponent<dim>:
            - Fixed an important bug in build() for real boundary components,
              which gave inconsistencies in the labelling of lower-dimensional
              faces.  See: https://regina-normal.github.io/bugs.html#bcbuild
    PYTHON:
        - Added missing Python bindings for Triangulation<dim>::simplices()
          for dimension dim ≥ 5.
    UTILITIES:
        - Fixed a bug in Katie's quadricolour search routine, which would cause
          a segfault when attempting to build a triangulation of a 0-framed
          unknot from certain single-crossing diagrams.

Version 7.4  [ 29 August, 2025 ] - Happy Wear it Purple day!

    GENERAL:
        - Regina now requires C++20 (not C++17).
        - The GUI now requires Qt6 (i.e., dropped support for Qt5).
        - The API docs now require Doxygen ≥ 1.9.2 (not ≥ 1.8.17).
        - Added support for simplex and facet locks throughout the API.  See
          Simplex<dim>::lock() and Simplex<dim>::lockFacet() for an overview
          of how locks work.  Many routines throughout the API could now
          potentially throw a LockViolation (and this is now explicitly noted
          in their respective docs); other routines now examine locks as part
          of their validity checks (e.g., local moves on triangulations).
        - All enumerations are now C++11 scoped enumerations, with the old
          names kept as deprecated constants in the regina:: namespace (for
          global enumerations) or the relevant class namespace (for class
          enumerations).
        - Explicit inequality tests (!=) have been removed, and are now
          automatically generated from equality tests (==) instead.
        - Explicit comparisons (<, <=, >, >=) have been removed, and are now
          automatically generated from the new spaceship operator (<=>).